--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,21 @@
 </head>
 <body>
 <h1 th:text="'List of owners'"></h1>
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner?.id}">1</td>
+        <td th:text="${owner?.firstName}">First Name</td>
+        <td th:text="${owner?.lastName}">Last Name</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
